First (rigid body)  ICP implementation + fixes

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -24,6 +24,7 @@ file(GLOB_RECURSE SFA_TEST_SRC_MAIN
     "../include/*.h"
     "../src/NearestNeighbor/*.cpp"
 	"../src/SFA/*.cpp"
+	"../src/ICP/*.cpp"
 )
 
 set (SFA_TEST_SRC
