--- a/SFAViewer/CMakeLists.txt
+++ b/SFAViewer/CMakeLists.txt
@@ -12,28 +12,14 @@
 ### Main library cmake compilation file
 ######################################################################
 cmake_minimum_required (VERSION 2.6)
-project (SFA_Tests C CXX)
+project (SFAVIEWER C CXX)
  
 ######################################################################
 ### Project code files
 ######################################################################
-file(GLOB_RECURSE SFA_TEST_SRC_ONLY
-	"*.cpp"
-)
-file(GLOB_RECURSE SFA_TEST_SRC_MAIN
-    "../SFAViewer/include/*.h"
-	"../SFAViewer/src/*.cpp"
-)
-# Remove main.cpp
-foreach(item ${SFA_TEST_SRC_MAIN})
-  if(${item} MATCHES "../SFAViewer/src/SFA/main.cpp")
-    list(REMOVE_ITEM SFA_TEST_SRC_MAIN ${item})
-  endif(${item} MATCHES "../SFAViewer/src/SFA/main.cpp")
-endforeach(item)
-
-set (SFA_TEST_SRC
-	${SFA_TEST_SRC_MAIN}
-	${SFA_TEST_SRC_ONLY}
+file(GLOB_RECURSE SFAVIEWER_SRC
+    "include/*.h"
+    "src/*.cpp"
 )
 
 ######################################################################
@@ -49,14 +35,14 @@ include_directories(${GLFW_INCLUDE_DIR})
 ######################################################################
 ### Make target
 ######################################################################
-add_executable(SFA_Tests ${SFA_TEST_SRC})
-set_target_properties(SFA_Tests PROPERTIES LINKER_LANGUAGE CXX)
+add_executable(SFAVIEWER ${SFAVIEWER_SRC})
+set_target_properties(SFAVIEWER PROPERTIES LINKER_LANGUAGE CXX)
 
 ######################################################################
 ### Link libraries
 ######################################################################
-target_link_libraries(SFA_Tests "${SFALIB_LIB_DIR}/${SFALIB_LIB_NAME}")
-target_link_libraries(SFA_Tests "${DBGL_BASE_LIB_DIR}/${DBGL_BASE_DLL_NAME}")
+target_link_libraries(SFAVIEWER "${SFALIB_LIB_DIR}/${SFALIB_LIB_NAME}")
+target_link_libraries(SFAVIEWER "${DBGL_BASE_LIB_DIR}/${DBGL_BASE_DLL_NAME}")
 
 ######################################################################
 ### Copy files
@@ -67,18 +53,13 @@ set(LIBRARIES2COPY
    "${GLEW_LIB_DIR}/${GLEW_DLL_NAME}"
    "${GLFW_LIB_DIR}/${GLFW_DLL_NAME}"
 )
-add_custom_target(ALWAYS_EXECUTE_SFA_TEST ALL)
-add_dependencies(SFA_Tests ALWAYS_EXECUTE_SFA_TEST)
+add_custom_target(ALWAYS_EXECUTE_SFAVIEWER ALL)
+add_dependencies(SFAVIEWER ALWAYS_EXECUTE_SFAVIEWER)
 # do the copying
 foreach(file_i ${LIBRARIES2COPY})
-	add_custom_command(TARGET ALWAYS_EXECUTE_SFA_TEST
+	add_custom_command(TARGET ALWAYS_EXECUTE_SFAVIEWER
                         PRE_BUILD
                         COMMAND ${CMAKE_COMMAND} -E copy_if_different ${file_i} "${PROJECT_BINARY_DIR}"
                         DEPENDS ${file_i}
                         )
 endforeach(file_i)
-
-######################################################################
-### Copy common resource folder
-######################################################################
-file(COPY "${PROJECT_SOURCE_DIR}/../Resources" DESTINATION "${PROJECT_BINARY_DIR}")
