--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,8 @@ cmake_minimum_required (VERSION 2.6)
 ######################################################################
 set (SFALIB_INCLUDE_DIR "${CMAKE_CURRENT_LIST_DIR}/SFALib/include")												# Path to libary headers
 set (SFALIB_LIB_DIR "${CMAKE_CURRENT_LIST_DIR}/${CMAKE_BUILD_TYPE}/SFALib")										# Path to libary file
+set (SFA_DBGL_LIB_INCLUDE_DIR "${CMAKE_CURRENT_LIST_DIR}/SFA_DBGL_Lib/include")									# Path to libary headers
+set (SFA_DBGL_LIB_LIB_DIR "${CMAKE_CURRENT_LIST_DIR}/${CMAKE_BUILD_TYPE}/SFA_DBGL_Lib")							# Path to libary file
 set (SFAVIEWER_INCLUDE_DIR "${CMAKE_CURRENT_LIST_DIR}/SFAViewer/include")										# Path to viewer headers
 set (SFASTATS_INCLUDE_DIR "${CMAKE_CURRENT_LIST_DIR}/SFAStats/include")											# Path to stats headers
 set (EIGEN_INCLUDE_DIR "${CMAKE_CURRENT_LIST_DIR}/lib/eigen/") 													# Path to Eigen headers
@@ -34,6 +36,8 @@ set (GLFW_INCLUDE_DIR "${CMAKE_CURRENT_LIST_DIR}/../Dragon-Blaze-Game-Library/DB
 if(WIN32)
 	set (SFALIB_DLL_NAME "libSFALIB.dll")
 	set (SFALIB_LIB_NAME "libSFALIB.dll.a")
+	set (SFA_DBGL_LIB_DLL_NAME "libSFA_DBGL_LIB.dll")
+	set (SFA_DBGL_LIB_LIB_NAME "libSFA_DBGL_LIB.dll.a")
 	set (DBGL_BASE_DLL_NAME "libDBGL_Base.dll")
 	set (GLEW_LIB_NAME "libglew32.dll.a")
 	set (GLEW_DLL_NAME "glew32.dll")
@@ -42,6 +46,8 @@ if(WIN32)
 elseif(UNIX)
 	set (SFALIB_DLL_NAME "libSFALIB.so")
 	set (SFALIB_LIB_NAME "libSFALIB.so")
+	set (SFA_DBGL_LIB_DLL_NAME "libSFA_DBGL_LIB.so")
+	set (SFA_DBGL_LIB_LIB_NAME "libSFA_DBGL_LIB.so")
 	set (DBGL_BASE_DLL_NAME "libDBGL_Base.so")
 	set (GLEW_LIB_NAME "libGLEW.so")
 	set (GLEW_DLL_NAME "libGLEW.so")
@@ -65,6 +71,8 @@ endif(CMAKE_COMPILER_IS_GNUCXX)
 ######################################################################
 add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/SFALib/"
 				 "${PROJECT_BINARY_DIR}/SFALib/")
+add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/SFA_DBGL_Lib/"
+				 "${PROJECT_BINARY_DIR}/SFA_DBGL_Lib/")
 add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/SFAViewer/"
 				 "${PROJECT_BINARY_DIR}/SFAViewer/")
 add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/SFAStats/"
