--- a/SFA_DBGL_Lib/CMakeLists.txt
+++ b/SFA_DBGL_Lib/CMakeLists.txt
@@ -12,12 +12,12 @@
 ### Main library cmake compilation file
 ######################################################################
 cmake_minimum_required (VERSION 2.6)
-project (SFA_STATS C CXX)
+project (SFA_DBGL_LIB C CXX)
  
 ######################################################################
 ### Project code files
 ######################################################################
-file(GLOB_RECURSE SFA_STATS_SRC
+file(GLOB_RECURSE SFA_DBGL_LIB_SRC
     "include/*.h"
     "src/*.cpp"
 )
@@ -25,10 +25,8 @@ file(GLOB_RECURSE SFA_STATS_SRC
 ######################################################################
 ### Include directories
 ######################################################################
-include_directories(${SFASTATS_INCLUDE_DIR})
 include_directories(${SFALIB_INCLUDE_DIR})
 include_directories(${SFA_DBGL_LIB_INCLUDE_DIR})
-include_directories(${SFAVIEWER_INCLUDE_DIR})
 include_directories(${EIGEN_INCLUDE_DIR})
 include_directories(${DBGL_BASE_INCLUDE_DIR})
 include_directories(${GLEW_INCLUDE_DIR})
@@ -37,33 +35,11 @@ include_directories(${GLFW_INCLUDE_DIR})
 ######################################################################
 ### Make target
 ######################################################################
-add_executable(SFA_STATS ${SFA_STATS_SRC})
-set_target_properties(SFA_STATS PROPERTIES LINKER_LANGUAGE CXX)
+add_library(SFA_DBGL_LIB SHARED ${SFA_DBGL_LIB_SRC})
+set_target_properties(SFA_DBGL_LIB PROPERTIES LINKER_LANGUAGE CXX)
 
 ######################################################################
 ### Link libraries
 ######################################################################
-target_link_libraries(SFA_STATS "${SFALIB_LIB_DIR}/${SFALIB_LIB_NAME}")
-target_link_libraries(SFA_STATS "${SFA_DBGL_LIB_LIB_DIR}/${SFA_DBGL_LIB_LIB_NAME}")
-target_link_libraries(SFA_STATS "${DBGL_BASE_LIB_DIR}/${DBGL_BASE_DLL_NAME}")
-
-######################################################################
-### Copy files
-######################################################################
-set(LIBRARIES2COPY
-   "${SFALIB_LIB_DIR}/${SFALIB_DLL_NAME}"
-   "${SFA_DBGL_LIB_LIB_DIR}/${SFA_DBGL_LIB_DLL_NAME}"
-   "${DBGL_BASE_LIB_DIR}/${DBGL_BASE_DLL_NAME}"
-   "${GLEW_LIB_DIR}/${GLEW_DLL_NAME}"
-   "${GLFW_LIB_DIR}/${GLFW_DLL_NAME}"
-)
-add_custom_target(ALWAYS_EXECUTE_SFA_STATS ALL)
-add_dependencies(SFA_STATS ALWAYS_EXECUTE_SFA_STATS)
-# do the copying
-foreach(file_i ${LIBRARIES2COPY})
-	add_custom_command(TARGET ALWAYS_EXECUTE_SFA_STATS
-                        PRE_BUILD
-                        COMMAND ${CMAKE_COMMAND} -E copy_if_different ${file_i} "${PROJECT_BINARY_DIR}"
-                        DEPENDS ${file_i}
-                        )
-endforeach(file_i)
+target_link_libraries(SFA_DBGL_LIB "${SFALIB_LIB_DIR}/${SFALIB_LIB_NAME}")
+target_link_libraries(SFA_DBGL_LIB "${DBGL_BASE_LIB_DIR}/${DBGL_BASE_DLL_NAME}")
